[project]
name = "backend"
version = "0.1.0"
description = "Autonomous AI prediction market analysis platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.117.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
